--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@
 	box-shadow: 3px 6px 6px rgba(24, 24, 24, 0.12);
 	margin: 0;
 	padding: 0;
+	display: block;
 	text-indent: 18px;
 	z-index: 1;
 	height: 1220px;
