--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h3 {
 
 
 html {    background: linear-gradient(to top, #018bb8, #269091, #2fa0bc);
-	background-repeat: repeat-y;
+	background-repeat: repeat-y repeat-x;
 	background-size: cover;}
 
 body {
@@ -89,6 +89,7 @@ footer {
     box-shadow:  2px 4px 2px rgba(0,0,0,0.23);
     width: 610px;
     height: 325px;
+
         
     color: black;
 }
@@ -151,8 +152,8 @@ footer {
 
 #HomePanel1 {
     
-        position: relative;
-    bottom: 645px;
+        position: absolute;
+    top: 260px;
 	width: 590px;
 	padding-left: 20px;
 	padding-top: 1px;
